gcc/testsuite/treelang/compile/badchar.tree
// { dg-do compile }
static int bar = 1*;  // { dg-error "Unrecognized" }
